podinfo/mtls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: "default"
  namespace: app
spec:
  mtls:
    mode: STRICT
