podinfo/monitoring.yaml
#TODO route53
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana-vc
  namespace: tools
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/app-gateway
  http:
  - match:
    - uri:
        prefix: /grafana/
    route:
    - destination:
        port:
          number: 3000
        host: grafana.tools.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: grafana-dr
  namespace: tools
spec:
  host: "*"
  subsets:
  - name: app
    labels:
      app: grafana
